move title to header

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -16,8 +16,12 @@
     <script src="./js/index.js"></script>
 </head>
 <body>
+    <header>
+        <div align="center">
+            <h1>西暦・和暦変換サービス</h1>
+        </div>
+    </header>
     <div class="container">
-        <h1>西暦・和暦変換サービス</h1>
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'anno_to_jp')" id="defaultOpen">西暦 -> 和暦</button>
             <button class="tablinks" onclick="openTab(event, 'jp_to_anno')">和暦 -> 西暦</button>
