--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -20,65 +20,67 @@
             <h1>西暦・和暦変換サービス</h1>
         </div>
     </header>
-    <div class="container">
-        <div class="tab">
-            <button class="tablinks" onclick="openTab(event, 'api_reference')" id="defaultOpen">変換ＡＰＩ</button>
-            <button class="tablinks" onclick="openTab(event, 'anno_to_jp')">西暦 -> 和暦</button>
-            <button class="tablinks" onclick="openTab(event, 'jp_to_anno')">和暦 -> 西暦</button>
-        </div>
-        <div id="api_reference" class="tabcontent"></div>
-        <div id="anno_to_jp" class="tabcontent">
-            <section>
-                <p>西暦年月日</p>
-                <p>
-                    <select id="anno_year"></select>年
-                    <select id="anno_month"></select>月
-                    <select id="anno_day"></select>日
-                    <input type="button" id="calc_jp" value="変換">
-                </p>
-            </section>
-            <section id="result_jp" style="display: none;">
-                <p>和暦年月日</p>
-                <p>
-                    <input type="text" id="result_jp_calendar1" size="2px"> <input type="tel" id="result_jp_year1" size="2px">年
-                    <input type="tel" id="result_jp_month1" size="2px">月
-                    <input type="tel" id="result_jp_day1" size="2px">日
-                    <input type="button" id="copy_to_clipboard1" value="コピー">
-                </p>
-                <p>
-                    <input type="text" id="result_jp_calendar2" size="2px"> <input type="tel" id="result_jp_year2" size="2px"> .
-                    <input type="tel" id="result_jp_month2" size="2px"> .
-                    <input type="tel" id="result_jp_day2" size="2px">
-                    <input type="button" id="copy_to_clipboard2" value="コピー">
-                </p>
-            </section>
-        </div>
-        <div id="jp_to_anno" class="tabcontent">
-            <section>
-                <p>和暦年月日</p>
-                <p>
-                    <select id="jp_era"></select>
-                    <select id="jp_year"></select>年
-                    <select id="jp_month"></select>月
-                    <select id="jp_day"></select>日
-                    <input type="button" id="calc_anno" value="変換">
-                </p>
-            </section>
-            <section id="result_anno" style="display: none;">
-                <p>
-                    <input type="tel" id="result_anno_year1" size="2px">年
-                    <input type="tel" id="result_anno_month1" size="2px">月
-                    <input type="tel" id="result_anno_day1" size="2px">日
-                    <input type="button" id="copy_to_clipboard3" value="コピー">
-                </p>
-                <p>
-                    <input type="tel" id="result_anno_year2" size="2px"> .
-                    <input type="tel" id="result_anno_month2" size="2px"> .
-                    <input type="tel" id="result_anno_day2" size="2px">
-                    <input type="button" id="copy_to_clipboard4" value="コピー">
-                </p>
-            </section>
-        </div>
+    <main>
+        <div class="container">
+            <div class="tab">
+                <button class="tablinks" onclick="openTab(event, 'api_reference')" id="defaultOpen">変換ＡＰＩ</button>
+                <button class="tablinks" onclick="openTab(event, 'anno_to_jp')">西暦 -> 和暦</button>
+                <button class="tablinks" onclick="openTab(event, 'jp_to_anno')">和暦 -> 西暦</button>
+            </div>
+            <div id="api_reference" class="tabcontent"></div>
+            <div id="anno_to_jp" class="tabcontent">
+                <section>
+                    <p>西暦年月日</p>
+                    <p>
+                        <select id="anno_year"></select>年
+                        <select id="anno_month"></select>月
+                        <select id="anno_day"></select>日
+                        <input type="button" id="calc_jp" value="変換">
+                    </p>
+                </section>
+                <section id="result_jp" style="display: none;">
+                    <p>和暦年月日</p>
+                    <p>
+                        <input type="text" id="result_jp_calendar1" size="2px"> <input type="tel" id="result_jp_year1" size="2px">年
+                        <input type="tel" id="result_jp_month1" size="2px">月
+                        <input type="tel" id="result_jp_day1" size="2px">日
+                        <input type="button" id="copy_to_clipboard1" value="コピー">
+                    </p>
+                    <p>
+                        <input type="text" id="result_jp_calendar2" size="2px"> <input type="tel" id="result_jp_year2" size="2px"> .
+                        <input type="tel" id="result_jp_month2" size="2px"> .
+                        <input type="tel" id="result_jp_day2" size="2px">
+                        <input type="button" id="copy_to_clipboard2" value="コピー">
+                    </p>
+                </section>
+            </div>
+            <div id="jp_to_anno" class="tabcontent">
+                <section>
+                    <p>和暦年月日</p>
+                    <p>
+                        <select id="jp_era"></select>
+                        <select id="jp_year"></select>年
+                        <select id="jp_month"></select>月
+                        <select id="jp_day"></select>日
+                        <input type="button" id="calc_anno" value="変換">
+                    </p>
+                </section>
+                <section id="result_anno" style="display: none;">
+                    <p>
+                        <input type="tel" id="result_anno_year1" size="2px">年
+                        <input type="tel" id="result_anno_month1" size="2px">月
+                        <input type="tel" id="result_anno_day1" size="2px">日
+                        <input type="button" id="copy_to_clipboard3" value="コピー">
+                    </p>
+                    <p>
+                        <input type="tel" id="result_anno_year2" size="2px"> .
+                        <input type="tel" id="result_anno_month2" size="2px"> .
+                        <input type="tel" id="result_anno_day2" size="2px">
+                        <input type="button" id="copy_to_clipboard4" value="コピー">
+                    </p>
+                </section>
+            </div>
+        </main>
     </div>
 </body>
 </html>
