--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -81,6 +81,9 @@
                 </section>
             </div>
         </main>
+        <footer>
+            <p>Copyright &copy; 2022 Meigetsu/Meigetsu Net. All rights reserved</p>
+        </footer>
     </div>
 </body>
 </html>
