update design of header and footer

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -16,9 +16,11 @@
 </head>
 <body>
     <header>
-        <div align="center">
-            <h1>西暦・和暦変換サービス</h1>
-        </div>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <div class="container">
+                <h1>西暦・和暦変換サービス</h1>
+            </div>
+        </nav>
     </header>
     <main>
         <div class="container">
@@ -81,8 +83,10 @@
                 </section>
             </div>
         </main>
-        <footer>
-            <p>Copyright &copy; 2022 Meigetsu/Meigetsu Net. All rights reserved</p>
+        <footer class="border-top footer text-muted">
+            <div class="container">
+                <p>Copyright &copy; 2022 Meigetsu/Meigetsu Net. All rights reserved</p>
+            </div>
         </footer>
     </div>
 </body>
