--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -63,32 +63,12 @@
                 <div id="anno_to_jp" class="tabcontent">
                     <section>
                         <p>西暦年月日</p>
-                        <p>
-                            <select id="anno_year"></select
-                            >年
-                            <select id="anno_month"></select
-                            >月
-                            <select id="anno_day"></select
-                            >日
-                            <input type="button" id="calc_jp" value="変換" />
-                        </p>
+                        <input type="date" id="anno_date">
+                        <input type="button" id="calc_jp" value="変換" />
                     </section>
                     <section id="result_jp" style="display: none">
                         <p>和暦年月日</p>
-                        <p>
-                            <input type="text" id="result_jp_calendar1" size="2px" />
-                            <input type="tel" id="result_jp_year1" size="2px" />年
-                            <input type="tel" id="result_jp_month1" size="2px" />月
-                            <input type="tel" id="result_jp_day1" size="2px" />日
-                            <input type="button" id="copy_to_clipboard1" value="コピー" />
-                        </p>
-                        <p>
-                            <input type="text" id="result_jp_calendar2" size="2px" />
-                            <input type="tel" id="result_jp_year2" size="2px" /> .
-                            <input type="tel" id="result_jp_month2" size="2px" /> .
-                            <input type="tel" id="result_jp_day2" size="2px" />
-                            <input type="button" id="copy_to_clipboard2" value="コピー" />
-                        </p>
+                        <input type="text" id="result_jp_text" readonly></p>
                     </section>
                 </div>
                 <div id="jp_to_anno" class="tabcontent">
@@ -96,28 +76,15 @@
                         <p>和暦年月日</p>
                         <p>
                             <select id="jp_era"></select>
-                            <select id="jp_year"></select
-                            >年
-                            <select id="jp_month"></select
-                            >月
-                            <select id="jp_day"></select
-                            >日
+                            <input type="number" id="jp_year" pattern="[1-9][0-9]*$">年
+                            <input type="number" id="jp_month" pattern="[1-9][0-9]*$">月
+                            <input type="number" id="jp_day" pattern="[1-9][0-9]*$">日
                             <input type="button" id="calc_anno" value="変換" />
                         </p>
                     </section>
                     <section id="result_anno" style="display: none">
-                        <p>
-                            <input type="tel" id="result_anno_year1" size="2px" />年
-                            <input type="tel" id="result_anno_month1" size="2px" />月
-                            <input type="tel" id="result_anno_day1" size="2px" />日
-                            <input type="button" id="copy_to_clipboard3" value="コピー" />
-                        </p>
-                        <p>
-                            <input type="tel" id="result_anno_year2" size="2px" /> .
-                            <input type="tel" id="result_anno_month2" size="2px" /> .
-                            <input type="tel" id="result_anno_day2" size="2px" />
-                            <input type="button" id="copy_to_clipboard4" value="コピー" />
-                        </p>
+                        <p>西暦年月日</p>
+                        <input type="text" id="result_anno_text" readonly></p>
                     </section>
                 </div>
             </div>
