--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -83,9 +83,9 @@
                         <p>和暦年月日</p>
                         <p>
                             <select id="jp_era"></select>
-                            <input type="number" id="jp_year" pattern="[1-9][0-9]*$" />年
-                            <input type="number" id="jp_month" pattern="[1-9][0-9]*$" />月
-                            <input type="number" id="jp_day" pattern="[1-9][0-9]*$" />日
+                            <input type="number" id="jp_year" min="1" max=64 pattern="[1-9][0-9]*$" />年
+                            <input type="number" id="jp_month" min="1" max="12" pattern="[1-9][0-9]*$" />月
+                            <input type="number" id="jp_day" min="1" max="31" pattern="[1-9][0-9]*$" />日
                             <input type="button" id="calc_anno" value="変換" />
                         </p>
                     </section>
