--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -3,6 +3,7 @@
 <html lang="ja" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>西暦・和暦変換サービス</title>
         <link
             rel="stylesheet"
