--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="ja" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="ja">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
