--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -58,10 +58,7 @@
             </nav>
         </header>
         <main>
-            <div class="container">
-                <div id="menu"></div>
-                <div id="content"></div>
-            </div>
+            <div id="content" class="container"></div>
         </main>
         <footer class="border-top footer text-muted">
             <div class="container">
