--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -12,8 +12,6 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-        <link rel="stylesheet" href="./css/style.css" />
-        <link rel="stylesheet" href="./css/tab.css" />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
@@ -45,7 +43,6 @@
             referrerpolicy="no-referrer"
         ></script>
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-        <script defer src="./js/index.js"></script>
     </head>
     <body>
         <header>
@@ -58,7 +55,13 @@
             </nav>
         </header>
         <main>
-            <div id="content" class="container"></div>
+            <div id="anno_to_jp" class="container"></div>
+            <p></p>
+            <div id="jp_to_anno" class="container"></div>
+            <p></p>
+            <div class="container">
+                <p>変換APIを利用したい方は<a href="./api_reference.html">こちら</a></p>
+            </div>
         </main>
         <footer class="border-top footer text-muted">
             <div class="container">
