update top page design

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -53,7 +53,25 @@
                 class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
             >
                 <div class="container">
-                    <h1>西暦・和暦変換サービス</h1>
+                    <a class="navbar-brand">西暦・和暦変換サービス</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="./">変換ページ</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="./api_reference.html">APIリファレンス</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" href="https://www.meigetsu.jp/privacy.html">
+                                    プライバシーポリシー
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </header>
